# fix-tanks-game

./: CMakeLists.txt  Dockerfile  README.md  bonuses.txt  students.txt
Algorithm/: CMakeLists.txt  README.md
Algorithm/Algo_include/: Player_209277367_322542887.h  TankAlgorithm_209277367_322542887.h
Algorithm/Algo_src/: Player_209277367_322542887.cpp  TankAlgorithm_209277367_322542887.cpp
GameManager/: CMakeLists.txt  README.md
GameManager/GM_include/: GM_209277367_322542887.h  TankInfo.h
GameManager/GM_src/: GM_209277367_322542887.cpp  TankInfo.cpp
MapChecker/: CMakeLists.txt  README.md  main.cpp
MapGenerator/: CMakeLists.txt  README.md  draw.cpp  main.cpp
Simulator/: CMakeLists.txt  README.md
Simulator/docs/: comparative.md  competition.md  parser.md
Simulator/sim_include/: AlgorithmRegistrar.h  GameManagerRegistrar.h  Simulator.h  cmd_parser.h  comparative_simulator.h  competitive_simulator.h  logger.h
Simulator/sim_src/: AlgorithmRegistrar.cpp  GameManagerRegistrar.cpp  GameManagerRegistration.cpp  PlayerRegistration.cpp  Simulator.cpp  TankAlgorithmRegistration.cpp  cmd_parser.cpp  comparative_simulator.cpp  competitive_simulator.cpp  main.cpp
UserCommon/: CMakeLists.txt
UserCommon/UC_include/: Direction.h  ExtBattleInfo.h  ExtSatelliteView.h  RegistrationNames.h  Shell.h
UserCommon/UC_src/: ExtBattleInfo.cpp  ExtSatelliteView.cpp  Shell.cpp
common/: AbstractGameManager.h  ActionRequest.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  Player.h  PlayerRegistration.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmRegisteration.h
docs/: BuildGuide.md  Docker.md  Overview.md  logger.md
tests/: README.md  test_cmd_parser.cpp  test_comparative_simulator.cpp  test_competitive_simulator.cpp
tests/utils/: utils.test.cpp
